cp: 	PR c++/3518 	* pt.c (check_cv_quals_for_unify): Ignore bogus CV quals at outer 	level. testsuite: 	PR c++/3518 	* g++.dg/template/unify7.C: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@80432 138bc75d-0d04-0410-961f-82ee72b054a4